--- a/style.css
+++ b/style.css
@@ -109,16 +109,18 @@ color: rgb(128, 79, 128);
 nav {
     
    flex-direction: column;
-    
- height: 220px;
+    height: 220px;
+    transition: all 0.1s ease-out ;
 
 }
 .navbar{
   height: 65px;
+  
 }
   
   nav ul li{
     flex-direction: column;
+    
     
     height: 41px;
     /* display: none; */
@@ -130,6 +132,8 @@ nav {
   padding-top: 25px;
   flex-direction: column;
   align-items: center;
+  transition: all 0.8s ease-in ;
+  transition: all 0.1s ease-out;
   /* height: 40px; */
   /* display: none; */
 }
