Changed the responsiveness of the nav bar to be responsive on screens smaller than 1140px.

--- a/style.css
+++ b/style.css
@@ -105,12 +105,13 @@ color: rgb(128, 79, 128);
      /* ---------------------------- */   
 
 /* <--------------------Responsiveness--------------------> */
-@media (min-width: 300px ) and (max-width: 700px) {
+@media only screen and (max-width: 1140px) {
 nav {
     
    flex-direction: column;
     height: 220px;
     transition: all 0.1s ease-out ;
+    transition-delay: 0.1s;
 
 }
 .navbar{
@@ -132,8 +133,8 @@ nav {
   padding-top: 25px;
   flex-direction: column;
   align-items: center;
-  transition: all 0.8s ease-in ;
-  transition: all 0.1s ease-out;
+  transition-delay: 0.1s;
+  
   /* height: 40px; */
   /* display: none; */
 }
