Changed the width of the image in the left section to 50% and added a projects section.

--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,16 @@ color: rgb(128, 79, 128);
 #element{
   color:rgb(128, 79, 128);
 }
+.projectHeader{
+  display: flex;
+  justify-content: center;
+  
+  margin-top: 10px;
+}
+.projects{
+  height: 70vh  ;
+  width: auto;
+}
 
 .btn {
   font-size:15px;
