Updated the css and html files. Added a footer section with contact details.

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,11 @@
   
 
 }
+.aboutHeader{
+  font-size: 2rem;
+  height: 50px  
+}
+
 .leftSection2 img{
   width: 60%;
   
@@ -78,33 +83,48 @@ color: rgb(128, 79, 128);
 .projectHeader{
   display: flex;
   justify-content: center;
+  font-size: 2rem;
   
-  margin-top: 10px;
+  margin-top: 50px;
 }
 .projects{
   height: 70vh  ;
   width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+}
+.headerProjects{
+  padding: 40px 60px;
+  border: 1px ;
+  border-radius: 5px;
+  border-color: #2f6627;
+}
+.projectDiscription{
+  margin: 20px 0px;
 }
 
 .btn {
-  font-size:15px;
   font-family: 'Nanum Gothic Coding', monospace;
-  width:140px;
-  height:40px;
-  border-width:0px;
-  color:rgba(252, 252, 252, 1);
-  border-color:rgba(77, 47, 77, 1);
-  border-top-left-radius:29px;
-  border-top-right-radius:29px;
-  border-bottom-left-radius:29px;
-  border-bottom-right-radius:29px;
-  text-shadow: 1px 1px 0px #2f6627;
-  background:rgba(128, 79, 128, 1);
+  display: inline-block;
+  margin-right: 10px;
+  padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
+  background-color: #b26db2;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
-.btn:hover {
-  background: rgba(178, 109, 178, 1)
+.btn a:hover {
+  background-color: #9B519B
 }
+.btn a{
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .buttonDiv{
   
   padding-top: 20px;
@@ -159,9 +179,104 @@ nav ul li a:hover:after {
   height: 80vh;
 
 }
+.fourthSection{
+  height: 20vh;
+  background-color: #3E3E3E;
+}
+.contactMeheader{
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+  padding-top: 35px;
+}
 
 
      /* ---------------------------- */   
+.project-box {
+            width: 300px;
+            border: 1px solid #b26db2;
+            padding: 20px;
+            margin: 20px;
+            display: inline-block;
+            vertical-align: top;
+        }
 
+        .project-header {
+            font-size: 24px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
 
+        .project-description {
+            color: #666;
+            margin-bottom: 20px;
+        }
 
+        .view-project {
+            text-align: center;
+        }
+
+       
+        .view-project a:hover {
+            text-decoration: none;
+        }
+        .projectsContainer{
+          padding-top: 15px;
+          display: flex;
+          justify-content: space-evenly;
+          align-items: center;
+          height: 90vh;
+        }
+        footer {
+          background-color: #333;
+          color: #fff;
+          text-align: center;
+          padding: 30px 0;
+      }
+
+      .footer-header {
+          font-size: 24px;
+          font-weight: bold;
+      }
+
+      .footer-message {
+          font-size: 16px;
+          margin-top: 35px;
+      }
+
+      .contact-details {
+          font-size: 14px;
+          margin-top: 20px;
+          text-decoration: none;
+          border: #fff;
+          border-radius: 2px;
+      }
+      .contact-details a {
+        text-decoration: none;
+        color: inherit;
+       
+    }
+
+      .contact-buttons {
+          margin-top: 30px;
+      }
+
+      .contact-buttons a {
+          display: inline-block;
+          margin-right: 10px;
+          padding: 10px 20px;
+          color: #fff;
+          text-decoration: none;
+          background-color: #b26db2;
+          border-radius: 5px;
+          transition: background-color 0.3s ease;
+      }
+
+      .contact-buttons a:hover {
+          background-color: #9B519B
+      }
+.end{
+  padding-top: 30px;
+  display: flex;
+  justify-content: center;
+}
