--- a/css/responsive.css
+++ b/css/responsive.css
@@ -58,12 +58,39 @@
      /*  .secondSection{
         height: 60vh;
       } */
+      .aboutHeader{
+        font-size: 1.5rem;
+        height: 50px  
+      }
+      .projectHeader{
+        font-size: 1.5rem;
+      }
       .rightSection2{
         width: 45%;
-        height: 55%;
+        height: 90%;
         font-size: 0.7rem;
         text-align: center;
       }
+      .projectsContainer{
+        padding-top: 15px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+      }
+      .projectHeader{
+        height: 222px;
+    display: flex;
+    justify-content: center;
+    font-size: 1.5rem;
+    margin-top: -175px
+      }
+.thirdSection{
+  margin-top: 30%;
+}
+      .fourthSection{
+        margin-top: 30%;
+    }
      /*  Hamburger Menu styles */
       .burger{
         display: inline;
